--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,17 @@ form{
 	background-color:#f5f5f5;
 	padding:5%;
 }
+button{
+  font-family:fantasy;
+  font-weight:bold;
+  font-size:18px;
+  background-color:white;
+  border:none;
+}
+button:hover{
+  border:2px red solid;
+  cursor:pointer;
+}
 h1{
 	width:80%;
 	padding:5%;
